upd ru translation

--- a/index_ru.html
+++ b/index_ru.html
@@ -39,11 +39,11 @@
                     <p>
                         Более 1+ года опыта работы в ИТ-индустрии в области тестирования и обеспечения качества,
                         обширный опыт в области тестирования WEB UI и API, включая ручное и авто-тестирование. Стек:
-                          Java, JUnit5, Selenide, RestAssured, Allure, Jenkins, Selenoid.
+                        Java, JUnit5, Selenide, RestAssured, Allure, Jenkins, Selenoid.
                     </p>
                     <br>
                     <p>
-                        Инструменты автоматизации тестирования пользовательского интерфейса
+                        Инструменты автоматизации тестирования Web UI
                     </p>
 
                     <!--<a rel="noopener noreferrer" target="_blank">
@@ -166,24 +166,32 @@
                             <div class="responsibilities">
                                 <ul>
                                     <li>
-                                        <strong>Junit.</strong> Реализована динамическая создание пользователей с помощью Junit Extension. Назначение экземплярам браузера
-                                        для каждой бизнес-роли во время выполнения теста для последующей работы с контекстом POM и отчетностью. Реализованы soft assertions для сбора ряда проверок и отчета о них в конце теста.
+                                        <strong>Junit.</strong> Реализована динамическая создание пользователей с
+                                        помощью Junit Extension. Назначение экземплярам браузера
+                                        для каждой бизнес-роли во время выполнения теста для последующей работы с
+                                        контекстом POM и отчетностью. Реализованы soft assertions для сбора ряда
+                                        проверок и отчета о них в конце теста.
                                     </li>
                                     <li>
-                                        <strong>RestAssured.</strong> Покрытие поведения системы на уровне API, следуя пользовательским историям.
+                                        <strong>RestAssured.</strong> Покрытие поведения системы на уровне API, следуя
+                                        пользовательским историям.
                                         Реализован подход к переходу состояний, учитывая бизнес-логику, для описания
                                         возможных состояний системы с помощью цепочки запросов API.
                                     </li>
                                     <li>
-                                        <strong>Selenide.</strong> Реализована зависимая от контекста  структура POM для описания различных пользовательских ролей.
-                                        Создание контекста страниц/компонентов для каждой роли. Следуя бизнес-логике, описан переход состояния UI-компонентов для каждого заданного состояния
+                                        <strong>Selenide.</strong> Реализована зависимая от контекста структура POM для
+                                        описания различных пользовательских ролей.
+                                        Создание контекста страниц/компонентов для каждой роли. Следуя бизнес-логике,
+                                        описан переход состояния UI-компонентов для каждого заданного состояния
                                         в контексте различных ролей.
                                     </li>
                                     <li>
-                                        <strong>Allure Reports.</strong> Интеграция отчетов для отображения результатов тестов в Jenkins.
+                                        <strong>Allure Reports.</strong> Интеграция отчетов для отображения результатов
+                                        тестов в Jenkins.
                                     </li>
                                     <li>
-                                        <strong>Jenkins.</strong> Настройка Jenkins для проекта. Удаленное выполнение тестов в Jenkins.
+                                        <strong>Jenkins.</strong> Настройка Jenkins для проекта. Удаленное выполнение
+                                        тестов в Jenkins.
                                     </li>
                                 </ul>
                             </div>
@@ -196,7 +204,7 @@
             </section>
 
             <section class="skills">
-                <h4 class="section-title">Навыки</h4>
+                <h4 class="section-title">Стек</h4>
                 <hr>
                 <article>
                     <ul class="skills-list">
@@ -215,7 +223,7 @@
             </section>
 
             <section class="languages">
-                <h2 class="section-title">Языки</h2>
+                <h4 class="section-title">Языки</h4>
                 <hr>
                 <article>
                     <ul class="languages-list">
@@ -229,7 +237,7 @@
 
     <div class="full-width-section">
         <section class="skills">
-            <h4 class="section-title">Твердые навыки</h4>
+            <h4 class="section-title">Hard skills</h4>
             <hr>
             <article>
                 <ul class="skills-list">
@@ -308,17 +316,21 @@
                     </li>
 
                     <li>
-                        <strong>Библиотеки фреймворка:</strong>
+                        <strong>Инструменты фреймворка:</strong>
                         <ul>
                             <li class="checkmark">JUnit: Основные аннотации: @Test, @Before, @After, параметризованные
                                 тесты, параллельное выполнение.
                             </li>
-                            <li class="checkmark">AssertJ: Плавные утверждения для лучшей читаемости.</li>
-                            <li class="checkmark">Hamcrest: угловые случаи утверждений строк.</li>
+                            <li class="checkmark">AssertJ: RecursiveComparison для JSON. Разнообразные условия при
+                                сравнении.
+                            </li>
+                            <li class="checkmark">Hamcrest: Частные случаи проверок вхождений в String.</li>
                             <li class="checkmark">Lombok: @Data, @Builder, @AllArgsConstructor, @NoArgsConstructor,
                                 @Chain.
                             </li>
-                            <li class="checkmark">Faker: Генерация случайных данных для тестов.</li>
+                            <li class="checkmark">Faker: Генерация случайных данных при создании профиля динамического
+                                пользователя.
+                            </li>
                             <li class="checkmark">Allure: Настройка Allure для проекта, генерация отчетов Allure.</li>
                             <li class="checkmark">Jenkins: Настройка Jenkins для проекта, запуск тестов в Jenkins.</li>
                             <li class="checkmark">Selenoid: Настройка Selenoid для проекта, запуск тестов в Selenoid.
@@ -367,8 +379,7 @@
                     <li>
                         <strong>Linux:</strong>
                         <ul>
-                            <li class="checkmark">Основные команды: grep, pwd, ls, cd, mv, touch, chmod, cat, less,
-                                tail, awk, выход из редактора vim.
+                            <li class="checkmark">Основные команды: pwd, ls, cd, mv, chmod, cat, awk, vim.
                             </li>
                         </ul>
                     </li>
