upd ru translation

--- a/index_ru.html
+++ b/index_ru.html
@@ -260,7 +260,7 @@
                             <li class="checkmark">Основные концепции: Типы данных, операторы, управляющие конструкции,
                                 обработка исключений.
                             </li>
-                            <li class="checkmark">Фреймворк коллекций - Map, List. StreamAPI.</li>
+                            <li class="checkmark">Фреймворк коллекций - Map, List. Понимание StreamAPI.</li>
                             <li class="checkmark">Иерархия исключений: Checked/unchecked исключения,
                                 пользовательская обработка исключений.
                             </li>
@@ -299,7 +299,7 @@
                                 и тайм-аутов.
                             </li>
                             <li class="checkmark">Явные и неявные ожидания: Понимание и реализация ожиданий для
-                                обработки синхронизации.
+                                разных состояний системы.
                             </li>
                             <li class="checkmark">Структура DOME, локаторы CSS и Xpath.</li>
                             <li class="checkmark">SelenideElement+Condition ElementsCollection+CollectionCondition
