upd hard skills

--- a/index_ru.html
+++ b/index_ru.html
@@ -355,16 +355,16 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
-                        <strong>Алгоритмы и шаблоны:</strong>
-                        <ul>
-                            <li class="checkmark">Бинарный поиск: Понимание и реализация алгоритма бинарного поиска.
-                            </li>
-                            <li class="checkmark">Пузырьковая сортировка: Понимание и реализация алгоритма пузырьковой
-                                сортировки.
-                            </li>
-                        </ul>
-                    </li>
+<!--                    <li>-->
+<!--                        <strong>Алгоритмы и шаблоны:</strong>-->
+<!--                        <ul>-->
+<!--                            <li class="checkmark">Бинарный поиск: Понимание и реализация алгоритма бинарного поиска.-->
+<!--                            </li>-->
+<!--                            <li class="checkmark">Пузырьковая сортировка: Понимание и реализация алгоритма пузырьковой-->
+<!--                                сортировки.-->
+<!--                            </li>-->
+<!--                        </ul>-->
+<!--                    </li>-->
                     <li>
                         <strong>Инфраструктура:</strong>
                         <ul>
