upd hard skills

--- a/index.html
+++ b/index.html
@@ -373,14 +373,14 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
+                  <!--  <li>
                         <strong>Linux:</strong>
                         <ul>
                             <li class="checkmark">Basic Commands: grep, pwd, ls, cd, mv, touch, chmod, cat, less, tail,
                                 awk, Exiting vim editor.
                             </li>
                         </ul>
-                    </li>
+                    </li>-->
                     <li>
                         <strong>General:</strong>
                         <ul>
@@ -405,9 +405,11 @@
     <div class="footer-row">
         <div class="downloads">
             <h4><i class="fas fa-file-download"></i> Downloads</h4>
-            <a download="proposed_file_name" href="path_to_file">PDF eng</a>
+            <a download="QA Igor Shingelevich"
+               href="resources/QA_Shingelevich_Igor_ru.pdf">
+                PDF ru</a>
             <br>
-            <a download="proposed_file_name" href="path_to_file">PDF ru</a>
+            <!--            <a download="proposed_file_name" href="path_to_file">PDF ru</a>-->
         </div>
     </div>
     <div class="footer-row">
