--- a/index.html
+++ b/index.html
@@ -251,19 +251,17 @@
                         <strong>Java:</strong>
                         <ul>
                             <li class="checkmark">OOP Principles: Encapsulation, inheritance, polymorphism, and
-                                abstraction.
+                                abstraction, SOLID.
                             </li>
-                            <li class="checkmark">Access Modifiers: Public, private, protected, and default. Non Access:
-                                Static
+                            <li class="checkmark">Access Modifiers: public, private, protected, and default. Non Access:
+                                static, final, sealed
                             </li>
-                            <li class="checkmark">Core Concepts: Datatypes, operators, control statements, Exception
-                                handling.
+                            <li class="checkmark">Core Concepts: Object, data types, exceptions handling.
                             </li>
-                            <li class="checkmark">Collections Framework - Map, List. StreamAPI.</li>
-                            <li class="checkmark">Exception Hierarchy: Checked vs unchecked exceptions, Custom exception
-                                handling.
+                            <li class="checkmark">Collections Framework - Map, List.</li>
+                            <li class="checkmark">Exception Hierarchy: Checked vs unchecked exceptions.
                             </li>
-                            <li class="checkmark">Advanced Features: Enums, method overriding, and overloading.</li>
+                            <li class="checkmark">Advanced Features: Enums, extensive  switch usage, method overriding, and overloading.</li>
                         </ul>
                     </li>
 
@@ -296,7 +294,7 @@
                             <li class="checkmark">Explicit and Implicit Waits: Understanding and implementing waits to
                                 handle synchronization.
                             </li>
-                            <li class="checkmark">DOME structure, CSS and Xpath locators</li>
+                            <li class="checkmark">DOM structure, CSS and Xpath locators</li>
                             <li class="checkmark"> SelenideElement+Condition ElementsCollection+CollectionCondition
                                 various actions and assertions Locators: Utilizing Selenide selectors to locate
                                 elements, Handling dynamic elements.
@@ -343,13 +341,13 @@
                     </li>
 
 
-                    <li>
+                   <!-- <li>
                         <strong>SQL:</strong>
                         <ul>
                             <li class="checkmark">DataGrip SELECT, INNER JOIN, OUTER JOIN, GROUP BY, HAVING clauses.
                             </li>
                         </ul>
-                    </li>
+                    </li>-->
                     <!--<li>
                         <strong>Algorithms and Patterns:</strong>
                         <ul>
