--- a/index_ru.html
+++ b/index_ru.html
@@ -251,19 +251,17 @@
                     <li>
                         <strong>Java:</strong>
                         <ul>
-                            <li class="checkmark">Принципы ООП: Инкапсуляция, наследование, полиморфизм и абстракция.
+                            <li class="checkmark">Принципы ООП: Инкапсуляция, наследование, полиморфизм и абстракция, SOLID.
                             </li>
-                            <li class="checkmark">Модификаторы доступа: Public, private, protected и default. Не
-                                модификаторы доступа: Static.
+                            <li class="checkmark">Модификаторы доступа: Public, private, protected и default. Non access  modifiers: static, final.
                             </li>
                             <li class="checkmark">Основные концепции: Типы данных, операторы, управляющие конструкции,
                                 обработка исключений.
                             </li>
-                            <li class="checkmark">Фреймворк коллекций - Map, List. Понимание StreamAPI.</li>
-                            <li class="checkmark">Иерархия исключений: Checked/unchecked исключения,
-                                пользовательская обработка исключений.
+                            <li class="checkmark">Фреймворк коллекций - Map, List.</li>
+                            <li class="checkmark">Иерархия исключений: Checked/unchecked исключения.
                             </li>
-                            <li class="checkmark">Расширенные возможности: Enums, overriding, overloading
+                            <li class="checkmark">Расширенные возможности: Enums,гибкое применение switch конструкций,overriding,overloading
                                 методов.
                             </li>
                         </ul>
@@ -300,7 +298,7 @@
                             <li class="checkmark">Явные и неявные ожидания: Понимание и реализация ожиданий для
                                 разных состояний системы.
                             </li>
-                            <li class="checkmark">Структура DOME, локаторы CSS и Xpath.</li>
+                            <li class="checkmark">Структура DOM, локаторы CSS и Xpath.</li>
                             <li class="checkmark">SelenideElement+Condition ElementsCollection+CollectionCondition
                                 различные действия и утверждения Локаторы: Использование селекторов Selenide для поиска
                                 элементов, обработка динамических элементов.
@@ -347,13 +345,13 @@
                         </ul>
                     </li>
 
-                    <li>
+                   <!-- <li>
                         <strong>SQL:</strong>
                         <ul>
                             <li class="checkmark">DataGrip SELECT, INNER JOIN, OUTER JOIN, GROUP BY, HAVING clauses.
                             </li>
                         </ul>
-                    </li>
+                    </li>-->
 <!--                    <li>-->
 <!--                        <strong>Алгоритмы и шаблоны:</strong>-->
 <!--                        <ul>-->
